--- a/Optomap Autoencoders.ipynb
+++ b/Optomap Autoencoders.ipynb
@@ -16,12 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas\n",
+    "import platform\n",
     "\n",
     "import torch\n",
     "import torchvision\n",
@@ -34,7 +35,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python Version: 3.7.1\n",
+      "Torch Version: 1.0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Python Version: {}\".format(platform.python_version()))\n",
+    "print(\"Torch Version: {}\".format(torch.__version__))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -149,38 +169,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Data/Unlabeled/Data/Unlabeled/63.jpg</td>\n",
+       "      <td>Data/Unlabeled/63.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Data/Unlabeled/Data/Unlabeled/6400.jpg</td>\n",
+       "      <td>Data/Unlabeled/6400.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Data/Unlabeled/Data/Unlabeled/823.jpg</td>\n",
+       "      <td>Data/Unlabeled/823.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Data/Unlabeled/Data/Unlabeled/4217.jpg</td>\n",
+       "      <td>Data/Unlabeled/4217.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Data/Unlabeled/Data/Unlabeled/3578.jpg</td>\n",
+       "      <td>Data/Unlabeled/3578.jpg</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                 FilePath\n",
-       "0    Data/Unlabeled/Data/Unlabeled/63.jpg\n",
-       "1  Data/Unlabeled/Data/Unlabeled/6400.jpg\n",
-       "2   Data/Unlabeled/Data/Unlabeled/823.jpg\n",
-       "3  Data/Unlabeled/Data/Unlabeled/4217.jpg\n",
-       "4  Data/Unlabeled/Data/Unlabeled/3578.jpg"
+       "                  FilePath\n",
+       "0    Data/Unlabeled/63.jpg\n",
+       "1  Data/Unlabeled/6400.jpg\n",
+       "2   Data/Unlabeled/823.jpg\n",
+       "3  Data/Unlabeled/4217.jpg\n",
+       "4  Data/Unlabeled/3578.jpg"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
